
    *******************************************************
    Warnings, errors, malfunctions, code patches, suggestions
    Support Forum: http://forum.darkbot.org
    *******************************************************

Darbkot 7f2: April 05, 2004

	- Hopefully fixed a bug that happened on BSD machines causing 
	  weirdness.  Changed a strcpy to strncpy.

	- Fixed the google function.  Google changed some text that 
	  the bot was using to tell if the search was successful. 
	 
Darkbot 7f1: March 30, 2004

	- Fixed a bug that happened while make tried to cp the binary
	  to the toplevel distribution directory.  It now compiles the
	  binary directory to the toplevel, and no longer needs to use
 	  "cp".

	- You can make color specific responses now.  Please let me
	  know if any problems arise from this.

	- Made a quick fix to a bug which caused crashing in randq.

	- Private message responses no longer have that "sent by" 
	  thing on them.  It was annoying, and pointless.

	- Renamed the log() function db_log() to avoid a conflict
	  with a function internal with gcc.  Apparently this only
	  affects newer versions of gcc.  

	- Added "make convertdb", which will compile the database
	  conversion utility, which encrypts the passwords in your
	  userlist.db file.

	- Removed two unused variables in convertdb.c.  I also changed
	  'unlink' to 'remove', to comply with the ANSI standard.

	- Changed forum URL to http://forum.darkbot.org, since that
          works too, looks cooler, and is shorter. :)

	- Fixed a bug that caused the bot to never respond to anything
	  after being killed.  The same problem was also fixed in a 
	  number of other situations that it was popping up. gs26() 
 	  was being called both before, and during prepare_bot(), so 
          I made the call happen only during prepare_bot().  

	- Fixed a minor flaw in convertdb.c.  It said the syntax was
	  "convertdb -convert", even if the executable wasn't named
	  convertdb.
